--- a/lazyload-principle.html
+++ b/lazyload-principle.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>图片懒加载</title>
+    <link rel="stylesheet" href="css/normalize.css"/>
     <style type="text/css">
         .container{
             width:100%;
@@ -16,30 +17,34 @@
 <body>
 <div class="container">
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img1.png">
+        <img class="my-photo" alt="loading" data-src="img/img1.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img2.png">
+        <img class="my-photo" alt="loading" data-src="img/img2.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img3.png">
+        <img class="my-photo" alt="loading" data-src="img/img3.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img4.png">
+        <img class="my-photo" alt="loading" data-src="img/img4.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img5.png">
+        <img class="my-photo" alt="loading" data-src="img/img5.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img6.png">
+        <img class="my-photo" alt="loading" data-src="img/img6.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img7.png">
+        <img class="my-photo" alt="loading" data-src="img/img7.png">
     </div>
     <div class="img-area">
-        <img class="my-photo" alt="loading" data-src="http://axuebin.com/lazyload/img/img8.png">
+        <img class="my-photo" alt="loading" data-src="img/img8.png">
     </div>
 </div>
 <script type="text/javascript" src="js/lazyload-principle.js"></script>
+<script type="text/javascript">
+    window.onload=checkImgs;
+    window.onscroll = throttle(checkImgs);
+</script>
 </body>
 </html>
