--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ES6实例</title>
-    <script type="text/javascript" src="./src/class.js"></script>
+    <script type="text/javascript" src="./src/SetAndMap.js"></script>
 </head>
 
 <body>
