--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ES6实例</title>
-    <script type="text/javascript" src="./src/proxy.js"></script>
+    <title>Es6部分属性的用法</title>
+    <script type="text/javascript" src="./src/promise.js"></script>
 </head>
 
 <body>
-    <h1>ES6实例</h1>
-    <hr>
-    <h3>ES6-proxy</h3>
-    <ol>
-        <li>
-            <p>proxy 实例</p>
-        </li>
-    </ol>
+    <h5>Es6一些属性的使用</h5>
 </body>
 
 </html>
